--- a/src/scss/components/_advisory-panel.scss
+++ b/src/scss/components/_advisory-panel.scss
@@ -28,6 +28,12 @@
 		padding-top: rem(16);
 	}
 
+	// The wrapper container for one's photo, name and job title
+	.wp-block-media-text {
+		// Use "!important" to override the inline style from WordPress
+		grid-template-columns: 30% auto !important;
+	}
+
 	// Photos
 	.wp-block-media-text .wp-block-media-text__media {
 		align-self: start;
@@ -75,6 +81,12 @@
 
 @include breakpoint-up(lg) {
 	.advisory-panel {
+		// The wrapper container for one's photo, name and job title
+		.wp-block-media-text {
+			// Use "!important" to override the inline style from WordPress
+			grid-template-columns: 20% auto !important;
+		}
+
 		// Names and job titles
 		.wp-block-media-text .wp-block-media-text__content {
 			grid-template-columns: 1fr;
