--- a/src/scss/components/_advisory-panel.scss
+++ b/src/scss/components/_advisory-panel.scss
@@ -45,6 +45,7 @@
 		display: grid;
 		grid-template-columns: 90% 10%;
 		grid-template-rows: auto auto 1fr;
+		margin-left: rem(11);
 
 		// The expand/collapse button
 		.wp-block-group {
@@ -91,6 +92,7 @@
 		.wp-block-media-text .wp-block-media-text__content {
 			grid-template-columns: 1fr;
 			grid-template-rows: auto auto 1fr auto;
+			margin-left: rem(30);
 
 			// The expand/collapse button
 			.wp-block-group {
