fix: use the white background color for advisor cards

--- a/src/scss/components/_advisory-panel.scss
+++ b/src/scss/components/_advisory-panel.scss
@@ -1,6 +1,7 @@
 // CSS classes for the "Advisory Panel" page
 .advisory-panel {
 	.api-content > .wp-block-group {
+		background-color: $white;
 		border-radius: 0 0 3px 3px;
 	}
 
